<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">ROS Gyro Teleop</string>
    
    <string name="no_paired_device">First pair in system settings!</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    
    <string name="bt_connected">Connected</string>
    <string name="bt_connecting">Connecting...</string>
    <string name="bt_unable_to_connect">Unable to connect</string>

    
     <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select Korsel BT Module</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <string name="settingsThreshold">Threshold</string>
    <string name="settingsSensitivityPitch">Sensitivity Pitch</string>
    <string name="settingsOK">OK</string>
    <string name="settingsDefault">Default</string>
    <string name="settingsSensitivityRoll">Sensitivity Roll</string>

    
  
    
</resources>
